# moddah

./: Cargo.toml  PKGBUILD  README.md
src/: main.rs
src/cliargs/: mod.rs
src/errorhandler/: mod.rs
