[package]
name = "moddah"
version = "0.1.0"
authors = ["Jonas_Jones"]
edition = "2021"
description = "A cli tool that allows for easy client and server installation of QuitlMC, FabricMC and ForgeModLoader for Minecraft"
#documentation = "https://doc.jonasjones.me/moddah/"
readme = "README.md"
homepage = "https://jonasjones.me/moddah"
repository = "https://github.com/J-onasJones/moddah"
license = "MIT OR Apache-2.0"
keywords = ["fabric", "quilt", "forge", "mineraft", "modded", "modding"]
categories = ["accessibility", "command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
